// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleList renders a list of articles 1`] = `
<div>
  <div
    class="container py-6"
  >
    <div
      class="row"
    >
      <div
        class="col text-center"
      >
        <h3>
          Click on an article below to read it
        </h3>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-6 col-md-3 p-3"
      >
        <div
          class="card h-100"
        >
          <div
            class="embed-responsive embed-responsive-16by9  card-img-top"
          >
            <div
              class="fill d-flex justify-content-center align-items-center"
            >
              <div
                class="spinner-border text-primary"
                role="status"
              >
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </div>
            </div>
          </div>
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              Article 1
            </h5>
            <p
              class="card-text"
            >
              READ THIS GUYS!...
            </p>
            <a
              href="articles/article-1/"
            >
              Read article
            </a>
          </div>
        </div>
      </div>
      <div
        class="col-6 col-md-3 p-3"
      >
        <div
          class="card h-100"
        >
          <div
            class="embed-responsive embed-responsive-16by9  card-img-top"
          >
            <div
              class="fill d-flex justify-content-center align-items-center"
            >
              <div
                class="spinner-border text-primary"
                role="status"
              >
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </div>
            </div>
          </div>
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              Article 2
            </h5>
            <p
              class="card-text"
            >
              READ THIS GUYS!...
            </p>
            <a
              href="articles/article-2/"
            >
              Read article
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArticleList renders the error state 1`] = `
<div>
  <h3
    class="text-center text-danger"
  >
    There was an error loading this content. Try refreshing the page.
  </h3>
</div>
`;

exports[`ArticleList renders the loading state 1`] = `
<div>
  <div
    class="fill d-flex justify-content-center align-items-center"
  >
    <div
      class="spinner-border text-primary"
      role="status"
    >
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;
